2001-03-29  Radek Doulik  <rodo@ximian.com>

	* test-html-editor-control.c (main): load file given as last
	parameter
	(load_file): new helper function

	* engine.c (impl_is_paragraph_empty): use html_clueflow_is_empty
	(impl_is_previous_paragraph_empty): ditto

	* body.c (ADD_COLOR): use default color for automatic

	* toolbar.c (unset_focus): new helper function
	(setup_color_combo): unset focus for whole color combo

2001-03-28  Larry Ewing  <lewing@ximian.com>

	* body.c (color_changed): return if the color is null.

	* editor-control-factory.c (editor_set_format): slave the painters
	color set and cleanup warnings.
	(edit_set_format): more warning cleanups.

2001-03-27  Larry Ewing  <lewing@ximian.com>

	* control-data.h: add format_html and gdk and plain painters.

	* control-data.c (gtk_html_control_data_new): initialize
	format_html and gdk and plain painters.

	* editor-control-factory.c (editor_control_construct): add a
	property bag with the FormatHTML property.
	(editor_set_prop): property bag set funtion.
	(editor_get_prop): proprty bag get function.
	(editor_set_format): toggle the painter based on the mode setting.

2001-03-16  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Hook up the .oaf.in build stuff and remove
	gnorba stuff since that is obsolete.
	
2001-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* popup.c: Added #include <config.h>.
	
2001-03-06  Miguel de Icaza  <miguel@ximian.com>

	* GNOME_GtkHTML_Editor.xml: Adjust to new layout (Insert of
	menu/Component/Insert, menu/Insert/Component). 

2001-02-19    <rodo@ximian.com>

	* Makefile.am: fix idl generating includes

2001-02-12  Radek Doulik  <rodo@ximian.com>

	* image.c (insert_or_apply): fix image width/height and percentage
	(image_properties): properly recognize file:// and file:

2001-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* GNOME_GtkHTML_Editor.oaf.in: Added this. Not hooked up yet.
	
2001-01-24  Larry Ewing  <lewing@ximian.com>
